WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49772
REGRESSION: Nested ruby no longer works
https://bugs.webkit.org/show_bug.cgi?id=49772
Summary
REGRESSION: Nested ruby no longer works
Dave Hyatt
Reported
2010-11-18 17:23:35 PST
Nested ruby no longer works. Overflow has to be accounted for when pushing the ruby text and ruby base together.
Attachments
Patch
(29.85 KB, patch)
2010-11-18 17:28 PST
,
Dave Hyatt
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2010-11-18 17:28:30 PST
Created
attachment 74327
[details]
Patch
Dave Hyatt
Comment 2
2010-11-18 17:34:07 PST
Fixed in
r72355
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug