https://bugs.webkit.org/show_bug.cgi?id=49772

Reviewed by Dan Bernstein.

Fix nested ruby.  My previous checkin (for 49717) broke it.  Push the ruby text and ruby base text
together based off logicalTopOverflow and logicalBottomOverflow rather than lineTop and lineBottom.
This way the overflow from nested rubies is accounted for.
        
Added fast/ruby/nested-ruby.html

WebCore: 

* rendering/RenderRubyRun.cpp:
(WebCore::RenderRubyRun::layout):

LayoutTests: 

* fast/ruby/nested-ruby.html: Added.
* platform/mac/fast/ruby/nested-ruby-expected.checksum: Added.
* platform/mac/fast/ruby/nested-ruby-expected.png: Added.
* platform/mac/fast/ruby/nested-ruby-expected.txt: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@72355 bbb929c8-8fbe-4397-9dbb-9b2b20218538